@@ -11,48 +11,71 @@ plugins {
      * In order to create it, launch the "shadowJar" task.
      * The runnable jar will be found in build/libs/projectname-all.jar
      */
-    id("com.gradleup.shadow") version "9.3.2"
-    id("org.danilopianini.gradle-java-qa") version "1.167.0"
+    id("com.gradleup.shadow") version "9.4.1"
+    id("org.danilopianini.gradle-java-qa") version "1.178.0"
 }
 
-repositories { // Where to search for dependencies
+repositories {
     mavenCentral()
 }
+
+java {
+    toolchain {
+        // Java version used to compile and run the project
+        languageVersion.set(JavaLanguageVersion.of(21))
+    }
+}
+
+val javaFXModules = listOf("base", "controls", "fxml", "swing", "graphics")
+
+val supportedPlatforms = listOf("linux", "mac", "win") // All required for OOP
 
 dependencies {
     // Suppressions for SpotBugs
     compileOnly("com.github.spotbugs:spotbugs-annotations:4.9.8")
 
-    // Maven dependencies are composed by a group name, a name and a version, separated by colons
-    implementation("com.omertron:API-OMDB:1.5")
-    implementation("org.jooq:jool:0.9.15")
+    // Example library: Guava. Add what you need (and use the latest version where appropriate).
+    // implementation("com.google.guava:guava:28.1-jre")
 
-    /*
-     * Simple Logging Facade for Java (SLF4J)
-     * See: http://www.slf4j.org/
-     */
-    val slf4jVersion = "2.0.17"
-    implementation("org.slf4j:slf4j-api:$slf4jVersion")
-    // Logback backend for SLF4J
-    runtimeOnly("ch.qos.logback:logback-classic:1.5.32")
+    // JavaFX: comment out if you do not need them
+    val javaFxVersion = "23.0.2"
+    implementation("org.openjfx:javafx:$javaFxVersion")
+    for (platform in supportedPlatforms) {
+        for (module in javaFXModules) {
+            implementation("org.openjfx:javafx-$module:$javaFxVersion:$platform")
+        }
+    }
 
-    // JUnit API and testing engine
+    // Mockito framework for testing
+    testImplementation("org.mockito:mockito-core:5.14.2")
+    testImplementation("org.mockito:mockito-junit-jupiter:5.14.2")
+
+    // The BOM (Bill of Materials) synchronizes all the versions of Junit coherently.
     testImplementation(platform("org.junit:junit-bom:6.0.3"))
-    testImplementation("org.junit.jupiter:junit-jupiter-api")
+    // The annotations, assertions and other elements we want to have access when compiling our tests.
+    testImplementation("org.junit.jupiter:junit-jupiter")
+    // The engine that must be available at runtime to run the tests.
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
-}
-
-application {
-    // Define the main class for the application.
-    mainClass.set("it.unibo.sampleapp.RateAMovie")
 }
 
 tasks.withType<Test>().configureEach {
-    useJUnitPlatform() // Enables the engine of JUnit 5/6
-    testLogging { // Additional Options
-        // Display all events (test started, succeeded, failed...)
+    // Enables JUnit 5 Jupiter module
+    useJUnitPlatform()
+
+    // Enable dynamic agent loading for Mockito to work properly
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
+
+    testLogging {
+        // Display all events
         events(*org.gradle.api.tasks.testing.logging.TestLogEvent.entries.toTypedArray())
-        showStandardStreams = true // Show the standard output
+        // Show the standard output and error of the test JVM(s) on the console
+        showStandardStreams = true
     }
+}
+
+val main = "it.unibo.javacrush.Main"
+
+application {
+    // Define the main class for the application
+    mainClass.set(main)
 }
